--- a/LoginPage/CreateNewTemplate.xaml
+++ b/LoginPage/CreateNewTemplate.xaml
@@ -39,8 +39,9 @@
         <TextBox x:Name="textBox" HorizontalAlignment="Center" Height="36" Margin="632,74,240,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="328" FontSize="24" Grid.ColumnSpan="2"/>
         <Button Content="Submit" HorizontalAlignment="Right" Margin="0,0,30,50" VerticalAlignment="Bottom" Width="250" Height="65" Click="Submit" FontSize="30" Grid.Column="1"/>
         <Button x:Name="bt_cancel" Content="Back" HorizontalAlignment="Left" Margin="55,0,0,50" VerticalAlignment="Bottom" Width="250" Height="65" FontSize="30" Click="Button_Click"/>
-        <Button x:Name="btnMaximise" Grid.ColumnSpan="2" Content="+" HorizontalAlignment="Right" Margin="0,10,18,0" VerticalAlignment="Top" Width="47" Height="46" FontSize="24" Click="Maximise_Click"/>
-        <Button x:Name="btnMinimise" Grid.ColumnSpan="2" Content="-" HorizontalAlignment="Right" Margin="0,10,83,0" VerticalAlignment="Top" Width="47" Height="46" FontSize="24" Click="Minimise_Click"/>
+        <Button x:Name="btnMaximise" Grid.ColumnSpan="2" Content="+" HorizontalAlignment="Right" Margin="0,10,83,0" VerticalAlignment="Top" Width="47" Height="46" FontSize="24" Click="Maximise_Click"/>
+        <Button x:Name="btnClose" Grid.ColumnSpan="2" Content="x" HorizontalAlignment="Right" Margin="0,10,18,0" VerticalAlignment="Top" Width="47" Height="46" FontSize="24" Click="Close_Click"/>
+        <Button x:Name="btnMinimise" Content="-" HorizontalAlignment="Right" Margin="0,10,149,0" VerticalAlignment="Top" Width="47" Height="46" FontSize="24" Click="Minimise_Click" Grid.Column="1"/>
         <Label Content="Select the desired sections for the template." HorizontalAlignment="Center" Margin="407,578,11,85" VerticalAlignment="Center" FontSize="20" Foreground="Gray" Width="412" />
 
     </Grid>
