--- a/LoginPage/FeedBackPage.xaml
+++ b/LoginPage/FeedBackPage.xaml
@@ -58,8 +58,9 @@
         <Label Content="Template Subject: Random" HorizontalAlignment="Center" Margin="311,85,644,578" VerticalAlignment="Center" FontSize="20"/>
         <Button x:Name="btnClearSelections" Content="Clear Current" HorizontalAlignment="Right" Margin="0,0,870,10" VerticalAlignment="Bottom" Width="140" Height="55" FontSize="20" Click="ClearSelected_Click"/>
         <Button x:Name="btnRestore" Content="Restore Previous" HorizontalAlignment="Right" Margin="0,0,705,10" VerticalAlignment="Bottom" Width="160" Height="55" FontSize="20" Click="Restore_Click"/>
-        <Button x:Name="btnMaximise" Grid.ColumnSpan="2" Content="+" HorizontalAlignment="Right" Margin="0,10,18,0" VerticalAlignment="Top" Width="47" Height="46" FontSize="24" Click="Maximise_Click"/>
-        <Button x:Name="btnMinimise" Grid.ColumnSpan="2" Content="-" HorizontalAlignment="Right" Margin="0,10,83,0" VerticalAlignment="Top" Width="47" Height="46" FontSize="24" Click="Minimise_Click"/>
+        <Button x:Name="btnMaximise" Grid.ColumnSpan="2" Content="+" HorizontalAlignment="Right" Margin="0,10,83,0" VerticalAlignment="Top" Width="47" Height="46" FontSize="24" Click="Maximise_Click"/>
+        <Button x:Name="btnClose" Grid.ColumnSpan="2" Content="x" HorizontalAlignment="Right" Margin="0,10,18,0" VerticalAlignment="Top" Width="47" Height="46" FontSize="24" Click="Close_Click"/>
+        <Button x:Name="btnMinimise" Content="-" HorizontalAlignment="Right" Margin="0,10,147,0" VerticalAlignment="Top" Width="47" Height="46" FontSize="24" Click="Minimise_Click"/>
         <Label Content="Applicants:" HorizontalAlignment="Center" Margin="39,94,1003,561" VerticalAlignment="Center" Width="158" Height="45" FontSize="25"/>
     </Grid>
 </Page>
