--- a/LoginPage/ProceedFeedbackPage.xaml
+++ b/LoginPage/ProceedFeedbackPage.xaml
@@ -18,5 +18,8 @@
         <Button x:Name="btnMaximise" Grid.ColumnSpan="2" Content="+" HorizontalAlignment="Right" Margin="0,10,83,0" VerticalAlignment="Top" Width="47" Height="46" FontSize="24" Click="Maximise_Click"/>
         <Button x:Name="btnClose" Grid.ColumnSpan="2" Content="x" HorizontalAlignment="Right" Margin="0,10,18,0" VerticalAlignment="Top" Width="47" Height="46" FontSize="24" Click="Close_Click"/>
         <Button x:Name="btnMinimise" Content="-" HorizontalAlignment="Right" Margin="0,10,147,0" VerticalAlignment="Top" Width="47" Height="46" FontSize="24" Click="Minimise_Click"/>
+        <Label x:Name="lblTemplateWarning" Content="Warning! When selecting an alternate template having previously" HorizontalAlignment="Center" Margin="577,463,197,203" VerticalAlignment="Center" Width="426" Height="34" FontSize="14" Foreground="Red"/>
+        <Label x:Name="lblTemplateWarning_Copy" Content="saved feedback for a position, only the selections for common" HorizontalAlignment="Center" Margin="577,497,197,169" VerticalAlignment="Center" Width="426" Height="34" FontSize="14" Foreground="Red"/>
+        <Label x:Name="lblTemplateWarning_Copy1" Content="sections will be used." HorizontalAlignment="Center" Margin="577,536,197,130" VerticalAlignment="Center" Width="426" Height="34" FontSize="14" Foreground="Red"/>
     </Grid>
 </Page>
