--- a/LoginPage/AddSectionWindow.xaml
+++ b/LoginPage/AddSectionWindow.xaml
@@ -18,7 +18,7 @@
 
             <Label Content="Section Name: " HorizontalAlignment="Left" Margin="10,37,0,0" VerticalAlignment="Top" Width="163" FontSize="20"/>
         <TextBox x:Name="tbSectionName" Height="37" Margin="154,37,9.8,0" TextWrapping="Wrap" VerticalAlignment="Top" Background="Transparent" BorderThickness="0" FontSize="25"/>
-        <Button Content="Add" HorizontalAlignment="Left" VerticalAlignment="Top" Width="101" Margin="112,95,0,0" Height="29" Click="Button_Click" IsDefault="True"/>
+        <Button x:Name="Add_section" Content="Add" HorizontalAlignment="Left" VerticalAlignment="Top" Width="101" Margin="112,95,0,0" Height="29" Click="Add_Click" IsDefault="True"/>
         
         </Grid>
     </Grid>
