--- a/LoginPage/DashboardPage.xaml
+++ b/LoginPage/DashboardPage.xaml
@@ -17,7 +17,7 @@
 
         <Label Content="Dashboard" HorizontalAlignment="Center" Margin="411,30,459,0" VerticalAlignment="Top" Height="81" Width="366" FontSize="48" Grid.ColumnSpan="2" HorizontalContentAlignment="Center"/>
 
-        <Button x:Name="btnCreateSection" Content="Create New Section" HorizontalAlignment="Center" Margin="787,501,105,129" VerticalAlignment="Center" Width="306" FontSize="30" Height="70" Click="btnCreateSection_Click" Grid.ColumnSpan="2"/>
+        <Button x:Name="btnCreateSection" Content="Manage sections" HorizontalAlignment="Center" Margin="787,501,105,129" VerticalAlignment="Center" Width="306" FontSize="30" Height="70" Click="btnCreateSection_Click" Grid.ColumnSpan="2"/>
         <Button x:Name="btnManageTemps" Content="Manage templates" HorizontalAlignment="Center" Margin="541,385,351,245" VerticalAlignment="Center" Width="306" FontSize="30" Height="70" Click="btnManageTemps_Click" Grid.ColumnSpan="2"/>
         <Button x:Name="btnManageCandidates" Content="Manage candidates" HorizontalAlignment="Center" Margin="328,270,564,360" VerticalAlignment="Center" Width="306" FontSize="30" Height="70" Grid.ColumnSpan="2" Click="btnManageCandidates_Click" />
         <Button x:Name="btnToFeedback" Content="Proceed to Feedback" HorizontalAlignment="Center" Margin="127,150,765,480" VerticalAlignment="Center" Width="306" FontSize="30" Height="70" Click="btnToFeedback_Click" Grid.ColumnSpan="2"/>
