--- a/LoginPage/CandidateManagement.xaml
+++ b/LoginPage/CandidateManagement.xaml
@@ -8,7 +8,13 @@
       d:DesignHeight="700" d:DesignWidth="1200"
       Title="CandidateManagement">
 
-    <Grid Background="#FF9BBFA3">
+    <Grid>
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+                <GradientStop Color="#FFA3D7C4"/>
+                <GradientStop Color="#FF8DBA49" Offset="1"/>
+            </LinearGradientBrush>
+        </Grid.Background>
         <Grid.RowDefinitions>
             <RowDefinition Height="27*"/>
             <RowDefinition Height="323*"/>
