--- a/LoginPage/ManageTemplatesPage.xaml
+++ b/LoginPage/ManageTemplatesPage.xaml
@@ -20,7 +20,7 @@
             <RowDefinition Height="191*"/>
         </Grid.RowDefinitions>
         <Button x:Name="Back" Content="Back" HorizontalAlignment="Left" Margin="42,0,0,30" VerticalAlignment="Bottom" Width="250" Height="65" FontSize="30" Click="Back__click" Grid.Row="1"/>
-      
+
         <ListBox Name="templatesListBox" HorizontalAlignment="Center" Height="456" Margin="347,108,349,136" VerticalAlignment="Center" Width="504" SelectionMode="Single" Loaded="TemplateListBox_Loaded" Grid.RowSpan="2" BorderBrush="White" BorderThickness="3" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
             <ListBox.Resources>
                 <Style TargetType="Border">
@@ -35,12 +35,13 @@
             </ListBox.Background>
         </ListBox>
 
-        <Button x:Name="New_from_selected" Content="New from selected" HorizontalAlignment="Center" Margin="891,310,59,38.4" VerticalAlignment="Center" Width="250" Height="54" FontSize="25" Click="New_from_selected_click" Tag="2"/>
+        <Button x:Name="New_from_selected" Content="New from selected" HorizontalAlignment="Center" Margin="891,272,59,76.4" VerticalAlignment="Center" Width="250" Height="54" FontSize="25" Click="New_from_selected_click" Tag="2"/>
         <Button x:Name="bt_CreateNewTemplate" Content="Create New Template" HorizontalAlignment="Center" Margin="891,122,59,230.4" VerticalAlignment="Center" Width="250" Height="50" FontSize="25" Click="Create_new_template_Click" Tag="1"/>
-        <Button x:Name="Edit_" Content="Edit" HorizontalAlignment="Center" Margin="891,86.6,59,157" VerticalAlignment="Center" Width="250" Height="54" FontSize="24" Click="Edit_click" Tag="3" Grid.Row="1"/>
+        <Button x:Name="Edit_" Content="Edit" HorizontalAlignment="Center" Margin="891,382,59,264" VerticalAlignment="Center" Width="250" Height="54" FontSize="24" Click="Edit_click" Tag="3" Grid.RowSpan="2"/>
         <Label Content="Templates:" HorizontalAlignment="Center" Margin="422,22,412,0" VerticalAlignment="Top" Height="81" Width="366" FontSize="45" HorizontalContentAlignment="Center"/>
         <Button x:Name="btnMaximise" Grid.ColumnSpan="2" Content="+" HorizontalAlignment="Right" Margin="0,10,83,0" VerticalAlignment="Top" Width="47" Height="46" FontSize="24" Click="Maximise_Click"/>
         <Button x:Name="btnClose" Grid.ColumnSpan="2" Content="x" HorizontalAlignment="Right" Margin="0,10,18,0" VerticalAlignment="Top" Width="47" Height="46" FontSize="24" Click="Close_Click"/>
         <Button x:Name="btnMinimise" Content="-" HorizontalAlignment="Right" Margin="0,10,147,0" VerticalAlignment="Top" Width="47" Height="46" FontSize="24" Click="Minimise_Click"/>
+        <Button x:Name="Delete_button" Content="Delete" HorizontalAlignment="Center" Margin="891,107.6,59,136" VerticalAlignment="Center" Width="250" Height="54" FontSize="24" Click="Delete_click" Tag="3" Grid.Row="1"/>
     </Grid>
 </Page>
