--- a/LoginPage/FeedBackPage.xaml
+++ b/LoginPage/FeedBackPage.xaml
@@ -9,7 +9,7 @@
       Title="FeedBackPage">
 
     <Grid Loaded="Grid_Loaded">
-        <Border CornerRadius="20" Grid.RowSpan="2">
+        <Border Grid.RowSpan="2">
             <Border.Background>
                 <LinearGradientBrush>
                     <GradientStop Color="#FFBCE2F7" Offset="0.0"/>
